          look and feel.
        * If 'navigation' is set, on mobile displays, a hamburger menu is
          displayed. When the user clicks on it, the navigation items are
          displayed as a popup menu.
        * Widgets now log what they do in Dancer2's logging system.
        * (CSS) Blog post header has a nice styling even when no feature image
          is set.

        [SCAFFOLDER]
        * The provided article is a little documentation about the 'Blog'
          widget, with guidelines on how to edit the article.

        [FIXES]
        * (CSS) Images adapt their width to small screens.
        * All routes for articles, pages, categories are now forced to their
          trailing slash version (/some/article/). Requests to the version
          without a trailing / are redirected. Needed to allow images loeaded
          locally from article locations.
        * (CSS) Activities Cards sizes are now stable to 280px. Responsiveness
          is good now.
        * (CSS) blog-cards sizes are now stable (420px max). Responsiveness is
          good now.
        * Fix article->image accessor to return proper permalinks if the meta
          value of the 'image' parameter is relative.
        * It's now possible to mount the Blog widget to the root of the site
          (/). This was causing many bugs in permalinks generation. Fixed now.

0.02    2023-10-31

        [FEATURES]
        * Feature 'highlight' can be set to include the Highligh JS library.
        * Navigation Bar: possible to configure navigation links in the liteblog
          settings. If present (as an array of hash containing a link and a
          label), each element will be displayed in the navigation bar.
          Currently only visible in the single-page layout.
        
        [DIST]
        * ship bin/liteblog-scaffold (was not in 0.01)
        * README.md/README with more information.
        
        [SCAFFOLDER]
        * Better design for the blog post page
