@@ -16,13 +16,15 @@ section#activities {
     gap: 20px;
     justify-content: center;
     padding: 40px 20px;
+
 }
 
 .activity-card {
     background-color: #ffffff;
     
-    width: calc(20% - 20px); 
-    min-width: 280px;
+    flex: 1 0 calc(33.333% - 20px); /* this ensures the card takes up 1/3 of the width minus the gap */
+    min-width: 280px; /* this is the minimum width each card will have */
+    max-width: 320px; /* this is the maximum width each card will have */
 
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
@@ -64,3 +66,4 @@ section#activities {
         max-width: 280px;
     }
 }
+
